# src/main/java/ru/intech/pechkin/messenger/infrastructure/service/impl/ChatServiceImpl.java
@@ -8,10 +8,7 @@ import org.springframework.stereotype.Service;
 import ru.intech.pechkin.messenger.infrastructure.persistance.entity.*;
 import ru.intech.pechkin.messenger.infrastructure.persistance.repo.*;
 import ru.intech.pechkin.messenger.infrastructure.service.ChatService;
-import ru.intech.pechkin.messenger.infrastructure.service.dto.ChatDto;
-import ru.intech.pechkin.messenger.infrastructure.service.dto.CreateGroupChatDto;
-import ru.intech.pechkin.messenger.infrastructure.service.dto.CreateP2PChatDto;
-import ru.intech.pechkin.messenger.infrastructure.service.dto.UpdateGroupChatDto;
+import ru.intech.pechkin.messenger.infrastructure.service.dto.*;
 import ru.intech.pechkin.messenger.infrastructure.service.mapper.ChatServiceMapper;
 
 import java.time.LocalDateTime;
@@ -21,7 +18,7 @@ import java.util.*;
 @RequiredArgsConstructor
 public class ChatServiceImpl implements ChatService {
     private final ChatRepository chatRepository;
-    private final UserRoleChatRepository userRoleChatRepository;
+    private final UserRoleMutedChatRepository userRoleMutedChatRepository;
     private final MessageRepository messageRepository;
     private final MessageDataRepository messageDataRepository;
     private final UserRepository userRepository;
@@ -30,30 +27,39 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public List<ChatDto> getAllChats(UUID userId) {
-        List<Chat> chats = chatRepository.findAllByIdIn(userRoleChatRepository.findAllByUserId(userId)
+        List<Chat> chats = chatRepository.findAllByIdIn(userRoleMutedChatRepository.findAllByUserId(userId)
                 .stream()
-                .map(UserRoleChat::getChatId)
+                .map(UserRoleMutedChat::getChatId)
                 .toList());
         if (chats.isEmpty())
             throw new NoSuchElementException("Чаты для данного пользователя пока отстутствуют");
         List<ChatDto> chatDtos = chats.stream()
                 .map(mapper::chatToChatDto)
                 .toList();
-        chatDtos.forEach(chatDto ->
-                chatDto.setMessage(messageRepository.findFirstByChatIdOrderByDateTimeDesc(chatDto.getId())));
         chatDtos.forEach(chatDto -> {
-            List<UserRoleChat> userRoleChats = userRoleChatRepository.findAllByChatId(chatDto.getId());
-            chatDto.setUsersWithRole(userRoleChats.stream()
-                    .map(userRoleChat -> userRepository.findById(userRoleChat.getUserId())
+            chatDto.setMessage(messageRepository.findFirstByChatIdOrderByDateTimeDesc(chatDto.getId()));
+
+            List<UserRoleMutedChat> userRoleMutedChats = userRoleMutedChatRepository.findAllByChatId(chatDto.getId());
+            chatDto.setUsersWithRole(userRoleMutedChats.stream()
+                    .map(userRoleMutedChat -> userRepository.findById(userRoleMutedChat.getUserId())
                             .orElseThrow(NullPointerException::new))
                     .map(user -> mapper.userAndRoleToUserWithRoleDto(
                             user,
-                            userRoleChats.stream()
-                                    .filter(userRoleChat -> userRoleChat.getUserId().equals(user.getId()))
+                            userRoleMutedChats.stream()
+                                    .filter(userRoleMutedChat -> userRoleMutedChat.getUserId().equals(user.getId()))
                                     .findFirst()
                                     .orElseThrow(NullPointerException::new)
                                     .getUserRole()))
                     .toList());
+
+            chatDto.setUnreadMessagesCount(
+                    messageRepository.findAllByChatId(chatDto.getId())
+                            .stream()
+                            .filter(message -> !message.getChecked() && message.getPublisher() != userId)
+                            .count()
+            );
+
+            chatDto.setMuted(userRoleMutedChatRepository.findByUserIdAndChatId(userId, chatDto.getId()).getMuted());
         });
         chatDtos = chatDtos.stream()
                 .sorted(Comparator.comparing(chatDto -> chatDto.getMessage().getDateTime()))
@@ -68,12 +74,13 @@ public class ChatServiceImpl implements ChatService {
     public void createFavoritesChat(UUID userId) {
         Chat chat = Chat.createFavorites();
         chatRepository.save(chat);
-        userRoleChatRepository.save(
-                UserRoleChat.builder()
+        userRoleMutedChatRepository.save(
+                UserRoleMutedChat.builder()
                         .id(UUID.randomUUID())
                         .chatId(chat.getId())
                         .userId(userId)
                         .userRole(Role.ADMIN)
+                        .muted(false)
                         .build()
         );
         createFirstMessageForFavoritesOrGroupChat(chat.getId());
@@ -91,12 +98,13 @@ public class ChatServiceImpl implements ChatService {
         }
         Chat chat = Chat.createP2P();
         chatRepository.save(chat);
-        dto.getUsers().forEach(userId -> userRoleChatRepository.save(
-                UserRoleChat.builder()
+        dto.getUsers().forEach(userId -> userRoleMutedChatRepository.save(
+                UserRoleMutedChat.builder()
                         .id(UUID.randomUUID())
                         .chatId(chat.getId())
                         .userId(userId)
                         .userRole(Role.ADMIN)
+                        .muted(false)
                         .build()
         ));
         List<MessageData> datas = dto.getMessageDto()
@@ -132,15 +140,16 @@ public class ChatServiceImpl implements ChatService {
         if (dto.getUsers().isEmpty() ||
                 userRepository.findByIdIn(dto.getUsers().keySet().stream().toList())
                         .orElseThrow(NullPointerException::new).isEmpty()) {
-            throw new IllegalArgumentException("В групповом чате должно быть больше двух пользователей");
+            throw new IllegalArgumentException("В групповом чате должны быть пользователи");
         }
-        Chat chat = Chat.createGroup(dto.getTitle());
-        dto.getUsers().forEach((key, value) -> userRoleChatRepository.save(
-                UserRoleChat.builder()
+        Chat chat = Chat.createGroup(dto.getTitle(), dto.getIcon());
+        dto.getUsers().forEach((key, value) -> userRoleMutedChatRepository.save(
+                UserRoleMutedChat.builder()
                         .id(UUID.randomUUID())
                         .chatId(chat.getId())
                         .userId(key)
                         .userRole(value)
+                        .muted(false)
                         .build()
         ));
         chatRepository.save(chat);
@@ -152,26 +161,27 @@ public class ChatServiceImpl implements ChatService {
     public void updateGroupChat(UpdateGroupChatDto dto) {
         Chat chat = chatRepository.findById(dto.getChatId())
                 .orElseThrow(NullPointerException::new);
-        List<UserRoleChat> userRoleChats = userRoleChatRepository.findAllByChatId(dto.getChatId());
+        List<UserRoleMutedChat> userRoleMutedChats = userRoleMutedChatRepository.findAllByChatId(dto.getChatId());
         chat.setTitle(dto.getTitle());
+        chat.setIcon(dto.getIcon());
         chatRepository.save(chat);
-        userRoleChats.forEach(userRoleChat -> {
+        userRoleMutedChats.forEach(userRoleMutedChat -> {
             Map.Entry<UUID, Role> filteredDto = dto.getUsers().entrySet().stream()
-                    .filter(entry -> entry.getKey().equals(userRoleChat.getUserId()))
+                    .filter(entry -> entry.getKey().equals(userRoleMutedChat.getUserId()))
                     .findFirst()
                     .orElse(null);
             if (filteredDto == null)
-                userRoleChatRepository.deleteByUserId(userRoleChat.getUserId());
+                userRoleMutedChatRepository.deleteByUserId(userRoleMutedChat.getUserId());
         });
-        userRoleChats.removeIf(userRoleChat -> !dto.getUsers().containsKey(userRoleChat.getUserId()));
+        userRoleMutedChats.removeIf(userRoleMutedChat -> !dto.getUsers().containsKey(userRoleMutedChat.getUserId()));
         dto.getUsers().forEach((key, value) -> {
-            UserRoleChat filteredUserRoleChat = userRoleChats.stream()
-                    .filter(userRoleChat -> key.equals(userRoleChat.getUserId()))
+            UserRoleMutedChat filteredUserRoleMutedChat = userRoleMutedChats.stream()
+                    .filter(userRoleMutedChat -> key.equals(userRoleMutedChat.getUserId()))
                     .findFirst()
                     .orElse(null);
-            if (filteredUserRoleChat == null) {
-                userRoleChats.add(
-                        UserRoleChat.builder()
+            if (filteredUserRoleMutedChat == null) {
+                userRoleMutedChats.add(
+                        UserRoleMutedChat.builder()
                                 .id(UUID.randomUUID())
                                 .chatId(dto.getChatId())
                                 .userId(key)
@@ -179,24 +189,33 @@ public class ChatServiceImpl implements ChatService {
                                 .build()
                 );
             } else {
-                userRoleChats.set(
-                        userRoleChats.indexOf(filteredUserRoleChat),
-                        UserRoleChat.builder()
-                                .id(filteredUserRoleChat.getId())
-                                .chatId(filteredUserRoleChat.getChatId())
+                userRoleMutedChats.set(
+                        userRoleMutedChats.indexOf(filteredUserRoleMutedChat),
+                        UserRoleMutedChat.builder()
+                                .id(filteredUserRoleMutedChat.getId())
+                                .chatId(filteredUserRoleMutedChat.getChatId())
                                 .userId(key)
                                 .userRole(value)
                                 .build()
                 );
             }
         });
-        userRoleChatRepository.saveAll(userRoleChats);
+        userRoleMutedChatRepository.saveAll(userRoleMutedChats);
+    }
+
+    @Override
+    public void updateChatMutedStatus(UpdateChatMutedStatusDto dto) {
+        UserRoleMutedChat userRoleMutedChat =
+                userRoleMutedChatRepository.findByUserIdAndChatId(dto.getUserId(), dto.getChatId());
+        userRoleMutedChat.setMuted(dto.getMuted());
+        userRoleMutedChatRepository.save(userRoleMutedChat);
     }
 
     @Override
     public void deleteChat(UUID chatId) {
+        chatRepository.findById(chatId).orElseThrow(NullPointerException::new);
         chatRepository.deleteById(chatId);
-        userRoleChatRepository.deleteAllByChatId(chatId);
+        userRoleMutedChatRepository.deleteAllByChatId(chatId);
         messageRepository.deleteAllByChatId(chatId);
         Page<ChatMessageDataMessage> page;
         do {
